fdo#71130 pretend to support service m_sServiceName

Which was the case before, and was probably erroneously changed in
commit 196f980012739d94654e6863b85b2e49f7e1a1e5
    fdo#54938: Replace existsValue for cppu::supportsService

Change-Id: I20323bba1105d1844c79a5a0ad3c9e133a9d0d05